# Comic_Store_Project

./: .env  LARAVEL_BACKEND_GUIDE.md  PROJECT_IMPROVEMENTS.md  QUICK_REFERENCE.md  README.md  RUST_BACKEND_GUIDE.md  backend.md  database-schema.dbml  env.d.ts  eslint.config.ts  index.html  package-lock.json  package.json
comic-store-backend/: .env.example  API_ENDPOINTS.md  Cargo.toml  README.md  SECURITY.md  nul
src/: App.vue  main.ts
src/components/Admin/: NavigationBar.vue  ProductCard.vue  UserModal.vue
src/components/client/: FooterPage.vue  HomePage.vue  LogIn-Page.vue  NavigationBar.vue  SearchBar.vue  Slider.vue  cart-item.vue  product-card.vue  productdescribes.vue
src/composables/: useAuth.ts  useScrollDirection.ts  useSearch.ts
src/data/: products.ts  sliderData.ts  users.ts
src/router/: index.ts
src/services/: api.ts
src/stores/: cart.ts  ratingSession.ts
src/views/Admin/: Admin_profile.vue  Analytics.vue  Dashboard.vue  E-Commerce.vue  EditAdminProfile.vue  OrderHistory.vue  Setting.vue  UserControl.vue
src/views/Auth/: LogIn-Page.vue  SignUp-Page.vue
src/views/Client/: Checkout-Page.vue  Checkout.vue  EditProfile-Page.vue  Homeview-Page.vue  Homeview.vue  Product-detail.vue  PurchaseHistory.vue  Rating-Page.vue  Settings-Page.vue  ShopCard.vue  ShopCart-Page.vue  product-page.vue  profileview-Page.vue  profileview.vue
src/views/authorize/: LogIn-Page.vue  SignUp-Page.vue
