[package]
name = "comic-store-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2"
actix-cors = "0.7"
tokio = { version = "1", features = ["full"] }
mongodb = { version = "2", default-features = false, features = ["tokio-runtime"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bson = { version = "2.4", features = ["serde_with"] }
serde_bytes = "0.11"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dotenv = "0.15"
log = "0.4"
env_logger = "0.10"
futures = "0.3"
actix-multipart = "0.4"
actix-files = "0.6"
futures-util = "0.3"
jsonwebtoken = "9"